Added more explanations for filters

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,4 @@
+# version details
 [version]
 name = "tangle-analyzer-alpha-v0.1.0"
 service = "Tangle Analyzer"
@@ -18,6 +19,9 @@ enable = "TRUE" # TRUE or FALSE
 input_folder = "dmp" # The historical dmp files from https://dbfiles.iota.org/?prefix=mainnet/history/
 output_folder = "decoded_data"
 
+# filter settings
+# Note: blank list represents `no filtering` to the target field.
+#       If a filter is set, then only transactions meet the filter conidtion will be reserved
 [filters]
 addresses = []
 bundle = []
